# HyperspectrumProcessing

./: .gitignore  CMakeLists.txt  Pretreatment.cpp
hsp/: __init__.py  cli.py  common.py  config.py  initialization.py  parallel.py  task.py
scripts/: background.py  decodeRunner.py  detector.py  rectification.py  searchPos.py  service.py  task.py  tracker.py  trajectory_evaluate.py  utils.py  websocketserver.py  workflow.py
src/: InterpolatorAdaptor.hpp  NA_point_trajectories.txt  RasterOperator.h  RasterProcessor.hpp  TileManager.hpp  bigfileio.cc  bigfileio.h  decode.cc  decodeRunner.py  decodeRunner.py.bak  enhancement.cc  enhancement.h  extractor.cc  gcp.txt  geo.cc  hsp.cc  inpaint.hpp  ipf.hpp  j2cgcs.cc  lx_geometry_rpc.cc  lx_geometry_rpc.h  main.cc  pathadaptor.hpp  pos.cc  pos.h  pos.py  radiometric.py  radiometric_correction.hpp  raster.hpp  searchPos.py  tracker.h  tracking.cc
src/SOFA/: sofa.cmake  t_sofa_c.c
src/decode/: decode.cc  decode.h  kmp.hpp  section.h  tokenizer.hpp
src/geometry/: lx_geometry_rpc.cc  ray2ellipsoid.hpp  xsofa.cc  xsofa.h
src/raster/: RasterOperator.h  RasterProcessor.hpp  SpectrumInterp.hpp  anomalydetection.hpp  bitilelut.hpp  blur.hpp  common.hpp  enhancement.h  enhancement.hpp  extractor.hpp  filter.hpp  gdal_traits.hpp  gdalex.hpp  histogram.hpp  io.hpp  operator.h  processor.hpp  radiometric.hpp  radiometric_correction.hpp  transform.hpp  transform_inl.hpp
src/raster/detail/: despeckle.hpp  destripe.hpp  histogram.hpp  inpaint.hpp  lookup.hpp  lsd.c  lsd.h
src/scripts/: decodeRunner.py  pos.py
src/template/: badpixel.xml  dark.xml  uniform.xml
src/util/: InterpolatorAdaptor.hpp  bigfileio.h  config.hpp  gdalex.hpp  pathadaptor.hpp
template/: Order.json  background.json  background.xml  badpixel.json  badpixel.xml  clahe.xml  config.json  destripe.xml  extend.xml  extractor.json  extractor.xml  median.xml  nuc.xml  render.xml  sort.xml  statistic.json  statistic.xml  tracker.json  tracker.xml  wallis.xml
